[workspace]
members = ["pam", "pam/examples/pam-http", "pam/examples/pam-kv", "pam/examples/pam-sober"]

[profile.release]
incremental = true
lto = "thin"
split-debuginfo = "packed"
strip = "debuginfo"

[profile.min-size-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"
split-debuginfo = "packed"
strip = "debuginfo"