[package]
name = "pam-kv"
version = "0.1.0"
authors = [
    "Anthony Nowell <anowell@gmail.com>",
    "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"
]
edition = '2021'

[lib]
name = "pam_kv"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
argon2 = "0.4.1"
balloon-hash = "0.3.0"
bcrypt-pbkdf = "0.9.0"
ctor = "0.1.26"
log = "0.4.22"
pam = { path = "../../" }
password-hash = "0.4.2"
pbkdf2 = "0.11.0"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
simplelog = { version = "0.12.2", features = ["paris"] }
tap = "1.0.1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util"] }
tokio-stream = "0.1.16"

